--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                                 min="103" 
                                 max="179" 
                                 step="0.1"
-                                placeholder="169.5"
-                                value="130"
+                                placeholder=""
+                                value=""
                             >
                         </div>
                         <div class="input-group">
