--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                 min="103" 
                                 max="179" 
                                 step="0.1"
-                                placeholder=""
+                                placeholder="169.5"
                                 value=""
                             >
                         </div>
@@ -325,7 +325,7 @@
                                 min="103" 
                                 max="179" 
                                 placeholder="First quest to do"
-                                value="103"
+                                value=""
                             >
                         </div>
                     </div>
