--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
             padding: 0.5rem;
             margin-bottom: 0.5rem;
             border-radius: 0 0.25rem 0.25rem 0;
+            color: #e9d5ff; /* 👈 Add this line for readable light text */
         }
 
         .info-section {
